--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/userCardView"
+        android:id="@+id/cardMainUser"
         android:layout_width="0dp"
         android:layout_height="128dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
@@ -25,38 +25,38 @@
             android:layout_margin="@dimen/fab_margin">
 
             <ImageView
-                android:id="@+id/userIcon"
+                android:id="@+id/icMainUser"
                 android:layout_width="@dimen/icon_width"
                 android:layout_height="@dimen/icon_height"
-                android:contentDescription="@string/user_icon"
+                android:contentDescription="@string/user_icon_text"
                 app:srcCompat="@mipmap/ic_launcher_round" />
 
             <TextView
-                android:id="@+id/textUser"
+                android:id="@+id/txtMainUserHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/userIcon"
+                android:layout_alignTop="@+id/icMainUser"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_toEndOf="@+id/userIcon"
-                android:text="@string/text_user"
+                android:layout_toEndOf="@+id/icMainUser"
+                android:text="@string/user_header_text"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/text_normal" />
 
             <TextView
-                android:id="@+id/username"
+                android:id="@+id/txtMainUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/userIcon"
+                android:layout_alignBottom="@+id/icMainUser"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_toEndOf="@+id/userIcon"
-                android:text="@string/username"
+                android:layout_toEndOf="@+id/icMainUser"
+                android:text="@string/user_default_name"
                 android:textSize="@dimen/text_header" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/farmCardView"
+        android:id="@+id/cardMainFarm"
         android:layout_width="0dp"
         android:layout_height="128dp"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
@@ -65,7 +65,7 @@
         app:cardBackgroundColor="?attr/colorButtonNormal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userCardView">
+        app:layout_constraintTop_toBottomOf="@+id/cardMainUser">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -73,44 +73,45 @@
             android:layout_margin="@dimen/fab_margin">
 
             <ImageView
-                android:id="@+id/farmIcon"
+                android:id="@+id/icMainFarm"
                 android:layout_width="@dimen/icon_width"
                 android:layout_height="@dimen/icon_height"
-                android:contentDescription="@string/farm_icon"
+                android:contentDescription="@string/farm_icon_text"
                 app:srcCompat="@mipmap/ic_launcher_round" />
 
             <TextView
-                android:id="@+id/farmname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/farmIcon"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_toEndOf="@+id/farmIcon"
-                android:text="@string/farmname"
-                android:textSize="@dimen/text_header" />
-
-            <TextView
-                android:id="@+id/textFarm"
+                android:id="@+id/txtMainFarmHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_toEndOf="@+id/farmIcon"
-                android:text="@string/text_farm"
+                android:layout_toEndOf="@+id/icMainFarm"
+                android:text="@string/farm_header_text"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/text_normal" />
+
+            <TextView
+                android:id="@+id/txtMainFarmName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/icMainFarm"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_toEndOf="@+id/icMainFarm"
+                android:text="@string/farm_default_name"
+                android:textSize="@dimen/text_header" />
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
     <Button
-        android:id="@+id/mainToPreData"
+        android:id="@+id/btnMainPreData"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:background="@color/colorGreenButton"
-        android:text="@string/prep_data"
+        android:text="@string/prep_data_btn_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
