--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,11 +6,16 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="box_elevation">16dp</dimen>
     <dimen name="icon_width">64dp</dimen>
     <dimen name="icon_height">64dp</dimen>
 
     <dimen name="text_header">24sp</dimen>
     <dimen name="text_sub_header">20sp</dimen>
     <dimen name="text_normal">16sp</dimen>
+    <dimen name="text_default">14sp</dimen>
+
+    <dimen name="text_header_spacing">32dp</dimen>
+    <dimen name="text_text_spacing">8dp</dimen>
+
+    <dimen name="btn_text_spacing">32dp</dimen>
 </resources>
